--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,16 @@
 language: php
 
 php:
-  - 5.3
-  - 5.4
-  - 5.5
   - 5.6
+  - 7.0
+  - 7.1
+  - nightly
 
 env:
-  - SYMFONY_VERSION=2.6.*
-  - SYMFONY_VERSION="dev-master symfony/debug:~2.7@dev symfony/http-kernel:~2.7@dev"
+  - SYMFONY_VERSION=2.8.*
+  - SYMFONY_VERSION=3.0.*
+  - SYMFONY_VERSION=3.3.*
+  - SYMFONY_VERSION=dev-master
 
 before_script:
   - composer self-update
@@ -19,7 +21,3 @@ before_script:
 
 script:
   - phpunit --coverage-text
-
-matrix:
-  allow_failures:
-    - env: SYMFONY_VERSION="dev-master symfony/debug:~2.7@dev symfony/http-kernel:~2.7@dev"
