--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,8 @@
         "ext-soap": "*",
         "ext-curl": "*",
         "ass/xmlsecurity": "~1.0",
-        "symfony/framework-bundle": "~2.6",
-        "symfony/twig-bundle": "~2.6",
+        "symfony/framework-bundle": "^2.8|^3",
+        "symfony/twig-bundle": "^2.8|^3",
         "zendframework/zend-mime": "2.2.*"
     },
     "replace": {
@@ -37,9 +37,9 @@
     },
     "require-dev": {
         "ext-mcrypt": "*",
-        "mikey179/vfsStream": "~1.0",
-        "symfony/filesystem": "~2.3",
-        "symfony/process": "~2.3"
+        "mikey179/vfsStream": "^1.6.5",
+        "symfony/filesystem": "^2.8|^3",
+        "symfony/process": "^2.8|^3"
     },
     "autoload": {
         "psr-0": { "BeSimple\\": "src/" }
