--- a/composer.json
+++ b/composer.json
@@ -20,13 +20,13 @@
         }
     ],
     "require": {
-        "php": ">=5.5.0",
+        "php": ">=7.1",
         "ext-soap": "*",
         "ext-curl": "*",
         "ass/xmlsecurity": "~1.0",
-        "symfony/framework-bundle": "^2.8|^3",
-        "symfony/twig-bundle": "^2.8|^3",
-        "zendframework/zend-mime": "2.2.*"
+        "symfony/framework-bundle": "^3|^4",
+        "symfony/twig-bundle": "^3|^4",
+        "laminas/laminas-mime": "2.2.*"
     },
     "replace": {
         "besimple/soap-bundle": "self.version",
@@ -37,9 +37,9 @@
     },
     "require-dev": {
         "ext-mcrypt": "*",
-        "mikey179/vfsStream": "^1.6.5",
-        "symfony/filesystem": "^2.8|^3",
-        "symfony/process": "^2.8|^3"
+        "mikey179/vfsstream": "^1.6.5",
+        "symfony/filesystem": "^3|^4",
+        "symfony/process": "^3|^4"
     },
     "autoload": {
         "psr-0": { "BeSimple\\": "src/" }
